# dotiam

./: Cargo.toml  README.md  world.yaml
docs/: PLAT_01.md  README_01.md
docs/02/: PLAN_02.md  README_02.md
docs/03/: PLAN_03.md  README_03.md
docs/04/: PLAN_04.2.md  PLAN_04.3.md  PLAN_04.md  README_04.md
docs/05/: PLAN_05.1.md  PLAN_05.2.md  README_05.md
docs/06/: PLAN_06.2.md  README_06.md
dotiam-app/: Cargo.toml
dotiam-app/migrations/: 20260131190000_init.sql
dotiam-app/src/: lib.rs
dotiam-core/: Cargo.toml
dotiam-core/src/: lib.rs
dotiam-web/: Cargo.toml
dotiam-web/src/: main.rs
dotiam-web/templates/: editor.html  index.html  partial_editor_details.html  partial_game.html  suggestions.html
