[package]
name = "dotiam-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dotiam-core = { path = "../dotiam-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
